Miscellaneous SVG fixes for Markdown

--- a/files/en-us/web/svg/attribute/clip-rule/index.html
+++ b/files/en-us/web/svg/attribute/clip-rule/index.html
@@ -32,33 +32,29 @@ browser-compat: svg.attributes.presentation.clip-rule
 
 <p>As a presentation attribute, it also can be used as a property directly inside a CSS stylesheet</p>
 
-<h2 id="Usage_context">Usage context</h2>
+<h2 id="Usage_notes">Usage notes</h2>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
-   <th scope="row">Categories</th>
-   <td>Presentation attribute</td>
+   <th scope="row">Value</th>
+   <td>nonzero | evenodd | inherit</td>
   </tr>
   <tr>
-   <th scope="row">Value</th>
-   <td><strong title="this is the default value">nonzero</strong> | evenodd | inherit</td>
+   <th scope="row">Default value</th>
+   <td>nonzero</td>
   </tr>
   <tr>
    <th scope="row">Animatable</th>
    <td>Yes</td>
   </tr>
-  <tr>
-   <th scope="row">Normative document</th>
-   <td><a href="https://www.w3.org/TR/SVG11/masking.html#ClipRuleProperty">SVG 1.1 (2nd Edition)</a></td>
-  </tr>
  </tbody>
 </table>
 
 <dl>
- <dt><span class="prop-value">nonzero</span></dt>
+ <dt>nonzero</dt>
  <dd>See description of {{ SVGAttr("fill-rule") }} property.</dd>
- <dt><span class="prop-value">evenodd</span></dt>
+ <dt>evenodd</dt>
  <dd>See description of {{ SVGAttr("fill-rule") }} property.</dd>
 </dl>
 
