--- a/files/en-us/web/svg/attribute/xml_colon_base/index.html
+++ b/files/en-us/web/svg/attribute/xml_colon_base/index.html
@@ -63,5 +63,5 @@ browser-compat: svg.attributes.core.xml_base
 <h2 id="See_also">See also</h2>
 
 <ul>
- <li><a href="https://www.w3.org/TR/xmlbase/"><cite>XML Base</cite></a> specification</li>
+ <li><a href="https://www.w3.org/TR/xmlbase/">XML Base</a> specification</li>
 </ul>
