--- a/files/en-us/web/svg/element/fecomposite/index.html
+++ b/files/en-us/web/svg/element/fecomposite/index.html
@@ -20,7 +20,7 @@ browser-compat: svg.elements.feComposite
     <th>Description</th>
   </tr>
   <tr>
-    <td><p>over <img src="operation_over.png" alt="over operator" width="300"></p></td>
+    <td><p>over <img src="operation_over.png" alt="over operator"></p></td>
     <td>The source graphic defined by the {{SVGAttr("in")}} attribute (the MDN logo) is placed over the destination graphic defined by the {{SVGAttr("in2")}} attribute (the circle).
       <p>This is the <em>default operation</em>, which will be used if no operation or an unsupported operation is specified.</p>
     </td>
