--- a/files/en-us/web/svg/tutorial/basic_shapes/index.html
+++ b/files/en-us/web/svg/tutorial/basic_shapes/index.html
@@ -65,7 +65,7 @@ tags:
 
 <p>The {{SVGElement("circle")}} element draws a circle on the screen. It takes 3 basic parameters to determine the shape and size of the element.</p>
 
-<pre class="brush:xml;gutter:false;">&lt;circle cx="25" cy="75" r="20"/&gt;</pre>
+<pre class="brush:xml">&lt;circle cx="25" cy="75" r="20"/&gt;</pre>
 
 <dl>
  <dt><code>r</code></dt>
@@ -80,7 +80,7 @@ tags:
 
 <p>An {{SVGElement("ellipse")}} is a more general form of the {{SVGElement("circle")}} element, where you can scale the x and y radius (commonly referred to as the <em>semimajor</em> and <em>semiminor</em> axes in maths) of the circle separately.</p>
 
-<pre class="brush:xml;gutter:false;">&lt;ellipse cx="75" cy="75" rx="20" ry="5"/&gt;</pre>
+<pre class="brush:xml">&lt;ellipse cx="75" cy="75" rx="20" ry="5"/&gt;</pre>
 
 <dl>
  <dt><code>rx</code></dt>
@@ -97,7 +97,7 @@ tags:
 
 <p>The {{SVGElement("line")}} element takes the positions of two points as parameters and draws a straight line between them.</p>
 
-<pre class="brush:xml;gutter:false;">&lt;line x1="10" x2="50" y1="110" y2="150" stroke="black" stroke-width="5"/&gt;</pre>
+<pre class="brush:xml">&lt;line x1="10" x2="50" y1="110" y2="150" stroke="black" stroke-width="5"/&gt;</pre>
 
 <dl>
  <dt><code>x1</code></dt>
@@ -114,7 +114,7 @@ tags:
 
 <p>A {{SVGElement("polyline")}} is a group of connected straight lines. Since the list of points can get quite long, all the points are included in one attribute:</p>
 
-<pre class="brush:xml;gutter:false;">&lt;polyline points="60, 110 65, 120 70, 115 75, 130 80, 125 85, 140 90, 135 95, 150 100, 145"/&gt;</pre>
+<pre class="brush:xml">&lt;polyline points="60, 110 65, 120 70, 115 75, 130 80, 125 85, 140 90, 135 95, 150 100, 145"/&gt;</pre>
 
 <dl>
  <dt><code>points</code></dt>
@@ -131,7 +131,7 @@ tags:
 <p><strong>Note:</strong> A rectangle is a type of polygon, so a polygon can be used to create a <code>&lt;rect/&gt;</code> element in cases where you need a little more flexibility.</p>
 </div>
 
-<pre class="brush:xml;gutter:false;">&lt;polygon points="50, 160 55, 180 70, 180 60, 190 65, 205 50, 195 35, 205 40, 190 30, 180 45, 180"/&gt;</pre>
+<pre class="brush:xml">&lt;polygon points="50, 160 55, 180 70, 180 60, 190 65, 205 50, 195 35, 205 40, 190 30, 180 45, 180"/&gt;</pre>
 
 <dl>
  <dt><code>points</code></dt>
@@ -144,7 +144,7 @@ tags:
 
 <p>For this reason, <a href="/en-US/docs/Web/SVG/Tutorial/Paths">the next section</a> in this tutorial will be focused on paths. But for now, note that there is a single parameter used to control its shape.</p>
 
-<pre class="brush:xml;gutter:false;">&lt;path d="M20,230 Q40,205 50,230 T90,230" fill="none" stroke="blue" stroke-width="5"/&gt;</pre>
+<pre class="brush:xml">&lt;path d="M20,230 Q40,205 50,230 T90,230" fill="none" stroke="blue" stroke-width="5"/&gt;</pre>
 
 <dl>
  <dt><code>d</code></dt>
