--- a/files/en-us/web/svg/attribute/kerning/index.html
+++ b/files/en-us/web/svg/attribute/kerning/index.html
@@ -64,9 +64,9 @@ browser-compat: svg.attributes.presentation.kerning
  <dd>
  <p>If a length is provided, then auto-kerning is disabled. Instead, inter-character spacing is set to the given length.</p>
 
- <p>If a length is provided without a unit identifier (e.g., an unqualified number such as <span class="attr-value">128</span>), the length is processed as a width value in the current user coordinate system. If a unit identifier (e.g., <code>0<span class="attr-value">.25em</span></code> or <code><span class="attr-value">1%</span></code>) is provided, then the length is converted into a corresponding value in the current user coordinate system.</p>
+ <p>If a length is provided without a unit identifier (e.g., an unqualified number such as 128), the length is processed as a width value in the current user coordinate system. If a unit identifier (e.g., <code>0.25em</code> or <code>1%</code>) is provided, then the length is converted into a corresponding value in the current user coordinate system.</p>
 
- <p>The most common scenario, other than <code><span class="prop-value">auto</span></code>, is to set <code>kerning</code> to a value of <code><span class="prop-value">0</span></code> so that auto-kerning is disabled.</p>
+ <p>The most common scenario, other than <code>auto</code>, is to set <code>kerning</code> to a value of <code>0</code> so that auto-kerning is disabled.</p>
 
  <p>The given length is added to the inter-character spacing value specified by the {{SVGAttr("letter-spacing")}} attribute.</p>
  </dd>
