--- a/files/en-us/web/svg/attribute/overflow/index.html
+++ b/files/en-us/web/svg/attribute/overflow/index.html
@@ -14,9 +14,9 @@ browser-compat: svg.attributes.presentation.overflow
 
 <ul>
  <li>If it has a value of <code>visible</code>, the attribute has no effect (i.e., a clipping rectangle is not created).</li>
- <li>If the <code>overflow</code> property has the value <code><span class="prop-value"> hidden</span></code> or <code><span class="prop-value">scroll</span></code>, a clip of the exact size of the SVG viewport is applied.</li>
- <li>When <code><span class="prop-value">scroll</span></code> is specified on an {{SVGElement("svg")}} element, a scrollbar or panner is normally shown for the SVG viewport whether or not any of its content is clipped.</li>
- <li>Within SVG content, the value <code><span class="prop-value">auto</span></code> implies that all rendered content for child elements must be <span class="prop-value">visible</span>, either through a scrolling mechanism, or by rendering with no clip.</li>
+ <li>If the <code>overflow</code> property has the value <code> hidden</code> or <code>scroll</code>, a clip of the exact size of the SVG viewport is applied.</li>
+ <li>When <code>scroll</code> is specified on an {{SVGElement("svg")}} element, a scrollbar or panner is normally shown for the SVG viewport whether or not any of its content is clipped.</li>
+ <li>Within SVG content, the value <code>auto</code> implies that all rendered content for child elements must be visible, either through a scrolling mechanism, or by rendering with no clip.</li>
 </ul>
 
 <div class="note"><p><strong>Note:</strong> Although the initial value for overflow is <code>auto</code>, it is overwritten in the User Agent style sheet for the {{SVGElement("svg")}} element when it is not the root element of a stand-alone document, the {{SVGElement("pattern")}} element, and the {{SVGElement("marker")}} element to be hidden by default.</p></div>
