Fix live sample ID arguments for SVG

--- a/files/en-us/web/svg/attribute/in/index.html
+++ b/files/en-us/web/svg/attribute/in/index.html
@@ -70,7 +70,7 @@ tags:
   <dd>This value is an assigned name for the filter primitive in the form of a {{cssxref("custom-ident")}}. If supplied, then graphics that result from processing this filter primitive can be referenced by an in attribute on a subsequent filter primitive within the same filter element. If no value is provided, the output will only be available for re-use as the implicit input into the next filter primitive if that filter primitive provides no value for its in attribute.</dd>
 </dl>
 
-<h2 id="Workaround_for_backgroundImage">Workaround for BackgroundImage</h2>
+<h2>Workaround for BackgroundImage</h2>
 
 <p><code>BackgroundImage</code> is not supported as a filter source in modern browsers (see the <a href="/en-US/docs/Web/SVG/Element/feComposite#browser_compatibility">feComposite compatibility table</a>). We therefore need to import one of the images to blend inside the filter itself, using an <code>&lt;feImage&gt;</code> element.</p>
 
@@ -107,7 +107,7 @@ tags:
 
 <h3 id="Result">Result</h3>
 
-<p>{{EmbedLiveSample("Workaround_for_backgroundImage")}}</p>
+<p>{{EmbedLiveSample("Workaround_for_BackgroundImage")}}</p>
 
 <h2 id="Specifications">Specifications</h2>
 
