--- a/files/en-us/web/svg/attribute/transform-origin/index.html
+++ b/files/en-us/web/svg/attribute/transform-origin/index.html
@@ -65,7 +65,7 @@ browser-compat: svg.attributes.presentation.transform-origin
  </li>
 </ul>
 
-<h2 id="example">Example</h2>
+<h2>Example</h2>
 
 <p>This example shows the code for one PNG image and three SVG images:</p>
 
@@ -208,7 +208,7 @@ browser-compat: svg.attributes.presentation.transform-origin
 
 <h3 id="result">Result</h3>
 
-<p>{{ EmbedLiveSample('example', 700, 1350) }}</p>
+<p>{{ EmbedLiveSample('Example', 700, 1350) }}</p>
 
 <h2 id="Specifications">Specifications</h2>
 
