--- a/files/en-us/glossary/fork/index.html
+++ b/files/en-us/glossary/fork/index.html
@@ -18,7 +18,7 @@ tags:
 <ul>
   <li>{{interwiki("wikipedia", "Fork_(software_development)","Fork")}} on Wikipedia</li>
   <li><a href="https://help.github.com/articles/fork-a-repo/">How to fork a GitHub repo</a> (fork as in a Git context)</li>
-  <li>{{Glossary("Fork")} (Glossary)</li>
+  <li>{{Glossary("Fork")}} (Glossary)</li>
   <li>Various "well-known" forks
     <ul>
       <li><a href="https://upload.wikimedia.org/wikipedia/commons/1/1b/Linux_Distribution_Timeline.svg">Linux distributions</a></li>
