--- a/files/en-us/mdn/at_ten/history_of_mdn/index.html
+++ b/files/en-us/mdn/at_ten/history_of_mdn/index.html
@@ -5,7 +5,7 @@ tags:
   - History
   - MDN Meta
 ---
-<p class="summary">In this talk from 2015, several contributors of the MDN project look at the past ten years of <a href="https://developer.mozilla.org">developer.mozilla.org</a>, and at the decade to come. You will hear the story of different wiki software migrations, how a documentation community was built, and many more highlights of the history of the site. The group then also talks about current challenges and projects the MDN community is working on this year.</p>
+<p>In this talk from 2015, several contributors of the MDN project look at the past ten years of <a href="https://developer.mozilla.org">developer.mozilla.org</a>, and at the decade to come. You will hear the story of different wiki software migrations, how a documentation community was built, and many more highlights of the history of the site. The group then also talks about current challenges and projects the MDN community is working on this year.</p>
 
 <div class="hidden" id="audio">
 <h3 id="Audio_player">Audio player</h3>
