--- a/files/en-us/mdn/at_ten/index.html
+++ b/files/en-us/mdn/at_ten/index.html
@@ -6,7 +6,7 @@ tags:
   - Landing
   - MDN Meta
 ---
-<p class="summary">Celebrate 10 years of documenting your Web.</p>
+<p>Celebrate 10 years of documenting your Web.</p>
 
 <h2 id="The_history_of_MDN">The history of MDN</h2>
 
