--- a/files/en-us/mdn/contribute/howto/write_an_api_reference/index.html
+++ b/files/en-us/mdn/contribute/howto/write_an_api_reference/index.html
@@ -10,9 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<div class="summary">
-<p><span class="seoSummary">This guide takes you through all you need to know to write an API reference on MDN.</span></p>
-</div>
+<p>This guide takes you through all you need to know to write an API reference on MDN.</span></p>
 
 <h2 id="Getting_prepared">Getting prepared</h2>
 
