--- a/files/en-us/mdn/guidelines/code_guidelines/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/index.html
@@ -13,11 +13,9 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<div>
-<p class="summary"><span class="seoSummary">This document series outlines the coding guidelines and best practices we use for writing demos, code snippets, interactive examples, etc, for use on MDN.</span></p>
+<p>This document series outlines the coding guidelines and best practices we use for writing demos, code snippets, interactive examples, etc, for use on MDN.</p>
 
 <p>If you are looking for guidelines to follow when writing your code examples, you have come to the right place. The biggest advantage to adhering to these guidelines is that it will foster consistency across our samples and demos on MDN, which increases readability and comprehension overall.</p>
-</div>
 
 <div class="note notecard">
 <p><strong>Note</strong>: If you want advice on the styling of code as it appears on an MDN article, rather than the code content, see our <a href="/en-US/docs/MDN/Guidelines/Writing_style_guide#code_sample_style_and_formatting">Writing style guide</a>.</p>
