--- a/files/en-us/mdn/guidelines/code_guidelines/javascript/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/javascript/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">The following guidelines cover how to write JavaScript for MDN code examples.</p>
+<p>The following guidelines cover how to write JavaScript for MDN code examples.</p>
 
 <p>The following is a fairly simple set of JavaScript guidelines. We could go a lot deeper on this, but essentially we want to provide simple guidelines for writing concise examples that will be understandable by as many people as possible, rather than detailed guidelines for writing complex web apps. If you want something that goes into more detail, we'd recommend the <a href="https://github.com/airbnb/javascript">AirBnB JavaScript Style Guide</a>, which is generally compatible with our guidelines.</p>
 
