--- a/files/en-us/mdn/guidelines/conventions_definitions/index.html
+++ b/files/en-us/mdn/guidelines/conventions_definitions/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">This article defines some conventions and definitions that are commonly used on MDN, which might not be obvious to some people when they come across them in the documentation.</p>
+<p>This article defines some conventions and definitions that are commonly used on MDN, which might not be obvious to some people when they come across them in the documentation.</p>
 
 <h2 id="Definitions">Definitions</h2>
 
