--- a/files/en-us/mdn/guidelines/video/index.html
+++ b/files/en-us/mdn/guidelines/video/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">MDN Web Docs is not a very video-heavy site, but there are certain places where video content makes sense to use as part of an article. <span class="seoSummary">This article discusses when including videos in MDN articles is appropriate, and provides tips on how to create simple but effective videos on a budget.</span></p>
+<p>MDN Web Docs is not a very video-heavy site, but there are certain places where video content makes sense to use as part of an article. This article discusses when including videos in MDN articles is appropriate, and provides tips on how to create simple but effective videos on a budget.</p>
 
 <h2 id="When_to_use_video_on_MDN">When to use video on MDN</h2>
 
