--- a/files/en-us/mdn/contribute/howto/index.html
+++ b/files/en-us/mdn/contribute/howto/index.html
@@ -10,6 +10,6 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary"><span class="seoSummary">These articles provide step-by-step guides to accomplishing specific goals when contributing to MDN.</span></p>
+<p>These articles provide step-by-step guides to accomplishing specific goals when contributing to MDN.</p>
 
 <p>{{LandingPageListSubpages}}</p>
