--- a/files/en-us/mdn/contribute/howto/write_an_api_reference/sidebars/index.html
+++ b/files/en-us/mdn/contribute/howto/write_an_api_reference/sidebars/index.html
@@ -15,7 +15,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">You are able to include a custom sidebar on API reference pages it so that it displays links to related Interfaces, tutorials, and other resources relevant just to that API. This article explains how.</p>
+<p>You are able to include a custom sidebar on API reference pages it so that it displays links to related Interfaces, tutorials, and other resources relevant just to that API. This article explains how.</p>
 
 <h2 id="Creating_a_sidebar">Creating a sidebar</h2>
 
