--- a/files/en-us/mdn/guidelines/code_guidelines/shell/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/shell/index.html
@@ -9,7 +9,7 @@ tags:
   - Shell
 ---
 <div>{{MDNSidebar}}</div>
-<p class="summary">The following guidelines cover how to write Shell prompts on MDN pages.</p>
+<p>The following guidelines cover how to write Shell prompts on MDN pages.</p>
 
 <h2 id="Shell_prompts_in_brief">Shell prompts in brief</h2>
 
