--- a/files/en-us/mdn/contribute/howto/add_or_update_browser_compatibility_data/index.html
+++ b/files/en-us/mdn/contribute/howto/add_or_update_browser_compatibility_data/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary"><span class="seoSummary">If you have information about browser compatibility of Web features — or are willing and able to do some research and/or experimentation — you can help update MDN's <a class="external external-icon" href="https://github.com/mdn/browser-compat-data/" rel="noopener">Browser Compatibility Data</a> (BCD).</span></p>
+<p>If you have information about browser compatibility of Web features — or are willing and able to do some research and/or experimentation — you can help update MDN's <a class="external external-icon" href="https://github.com/mdn/browser-compat-data/" rel="noopener">Browser Compatibility Data</a> (BCD).</p>
 
 <dl>
  <dt>Where does it need to be done?</dt>
