--- a/files/en-us/mdn/guidelines/code_guidelines/html/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/html/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">The following guidelines cover how to write HTML for MDN code examples.</p>
+<p>The following guidelines cover how to write HTML for MDN code examples.</p>
 
 <h2 id="In_this_article">In this article</h2>
 
