--- a/files/en-us/mdn/structures/page_types/index.html
+++ b/files/en-us/mdn/structures/page_types/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">There are a number of types of pages that are used repeatedly on MDN. This article describes these page types, their purpose, and gives examples of each and templates to use when creating a new page.</p>
+<p>There are a number of types of pages that are used repeatedly on MDN. This article describes these page types, their purpose, and gives examples of each and templates to use when creating a new page.</p>
 
 <p>There are three broad categories of page types on MDN, though some page types fall into more than one category.</p>
 
