--- a/files/en-us/mdn/structures/syntax_sections/index.html
+++ b/files/en-us/mdn/structures/syntax_sections/index.html
@@ -12,7 +12,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">The syntax section of an MDN reference page contains a syntax box defining the exact syntax that a feature has (e.g. what parameters can it accept, which ones are optional?) This article explains how to write syntax boxes for reference articles.</p>
+<p>The syntax section of an MDN reference page contains a syntax box defining the exact syntax that a feature has (e.g. what parameters can it accept, which ones are optional?) This article explains how to write syntax boxes for reference articles.</p>
 
 <h2 id="API_reference_syntax">API reference syntax</h2>
 
