--- a/files/en-us/mdn/contribute/howto/migrate_external_content_to_mdn/index.html
+++ b/files/en-us/mdn/contribute/howto/migrate_external_content_to_mdn/index.html
@@ -7,7 +7,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p>You will sometimes identify already-existing content that would make sense to migrate onto MDN Web Docs from elsewhere. <span class="seoSummary">This article covers what kinds of content potentially make sense to migrate, whether you should migrate content or not, and what workflow to use to undertake the migration.</span></p>
+<p>You will sometimes identify already-existing content that would make sense to migrate onto MDN Web Docs from elsewhere. This article covers what kinds of content potentially make sense to migrate, whether you should migrate content or not, and what workflow to use to undertake the migration.</p>
 
 <h2 id="What_content_would_make_sense_to_migrate">What content would make sense to migrate?</h2>
 
