--- a/files/en-us/mdn/contribute/processes/matching_features_to_browser_version/index.html
+++ b/files/en-us/mdn/contribute/processes/matching_features_to_browser_version/index.html
@@ -23,7 +23,7 @@ tags:
 ---
 <p>{{Draft}}{{MDNSidebar}}</p>
 
-<p>When contributing to the documentation on the MDN web docs site, you will often need to locate and identify version-specific details for a given browser, such as which versions of each major browser implement support for the feature you're documenting. <span class="seoSummary">This article provides tips and pointers to help you figure out which version of each major browser introduced a given feature, and when it was enabled by default.</span></p>
+<p>When contributing to the documentation on the MDN web docs site, you will often need to locate and identify version-specific details for a given browser, such as which versions of each major browser implement support for the feature you're documenting. This article provides tips and pointers to help you figure out which version of each major browser introduced a given feature, and when it was enabled by default.</p>
 
 <div class="notecard note">
 <p>In this article, the term <strong>feature</strong> is used to refer to anything that might need to be documented on MDN. This includes APIs, HTML elements, new HTML attributes, new CSS properties, new possible values for CSS properties, and so forth. Anything that needs to be documented, from very small to very large.</p>
