--- a/files/en-us/mdn/tools/kumascript/index.html
+++ b/files/en-us/mdn/tools/kumascript/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">On the <a href="/en-US/docs/MDN/Yari">Yari</a> platform that powers MDN, we still have a legacy template/macro system available called <a href="https://github.com/mdn/yari/tree/master/kumascript">KumaScript</a> for automating certain aspects of content.</span> We are hoping to stop using it some day, but until then MDN will still rely on it. This article provides basic information about using KumaScript</p>
+<p>On the <a href="/en-US/docs/MDN/Yari">Yari</a> platform that powers MDN, we still have a legacy template/macro system available called <a href="https://github.com/mdn/yari/tree/master/kumascript">KumaScript</a> for automating certain aspects of content. We are hoping to stop using it some day, but until then MDN will still rely on it. This article provides basic information about using KumaScript</p>
 
 <h3 id="What_is_KumaScript">What is KumaScript?</h3>
 
