--- a/files/en-us/mdn/contribute/getting_started/index.html
+++ b/files/en-us/mdn/contribute/getting_started/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p id="What_is_MDN.3F"><span class="seoSummary">We are an open community of developers building resources for a better Web, regardless of brand, browser, or platform. Anyone can contribute and each person who does makes us stronger. Together we can continue to drive innovation on the Web to serve the greater good. It starts here, with you.</span></p>
+<p>We are an open community of developers building resources for a better Web, regardless of brand, browser, or platform. Anyone can contribute and each person who does makes us stronger. Together we can continue to drive innovation on the Web to serve the greater good. It starts here, with you.</p>
 
 <p>Every part of MDN (docs, demos, and the site itself) is created by an open community of developers. Please, join us!</p>
 
