--- a/files/en-us/mdn/contribute/howto/create_and_edit_pages/index.html
+++ b/files/en-us/mdn/contribute/howto/create_and_edit_pages/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">This article introduces new contributors to the process of editing existing pages and creating new ones.</span></p>
+<p>This article introduces new contributors to the process of editing existing pages and creating new ones.</p>
 
 <h2 id="Editing_an_existing_page">Editing an existing page</h2>
 
