--- a/files/en-us/mdn/contribute/howto/write_for_seo/index.html
+++ b/files/en-us/mdn/contribute/howto/write_for_seo/index.html
@@ -12,7 +12,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">This guide covers our standard practices, recommendations, and requirements for content to help ensure that search engines can easily categorize and index our material in order to ensure that users can easily reach what they need.</span></p>
+<p>This guide covers our standard practices, recommendations, and requirements for content to help ensure that search engines can easily categorize and index our material in order to ensure that users can easily reach what they need.</p>
 
 <h2 id="Introduction">Introduction</h2>
 
