--- a/files/en-us/mdn/guidelines/editorial/index.html
+++ b/files/en-us/mdn/guidelines/editorial/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">This article describes the policies set by the Mozilla MDN staff to govern the content on MDN web docs.</span> All contributors to MDN web docs are expected to abide by these policies.</p>
+<p>This article describes the policies set by the Mozilla MDN staff to govern the content on MDN web docs. All contributors to MDN web docs are expected to abide by these policies.</p>
 
 <h2 id="Relevance">Relevance</h2>
 
