--- a/files/en-us/mdn/structures/quicklinks/index.html
+++ b/files/en-us/mdn/structures/quicklinks/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">MDN supports adding quicklinks to pages; these are boxes containing a potentially hierarchical list of links to other pages on MDN or to pages off-site. This article describes how to create quicklinks boxes.</span></p>
+<p>MDN supports adding quicklinks to pages; these are boxes containing a potentially hierarchical list of links to other pages on MDN or to pages off-site. This article describes how to create quicklinks boxes.</p>
 
 <h2 id="Quicklinks_syntax">Quicklinks syntax</h2>
 
