--- a/files/en-us/mdn/tools/sample_server/index.html
+++ b/files/en-us/mdn/tools/sample_server/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">While MDN provides a built-in <a href="/en-US/docs/MDN/Structures/Live_samples">live sample system</a> for presenting simple (and even not-so-simple) code samples with the code's output displayed in-context, there are samples that require a server to talk to. For those things, we have the MDN sample server, which solves these and other problems.</span> This article is a guide to the use of the sample server.</p>
+<p>While MDN provides a built-in <a href="/en-US/docs/MDN/Structures/Live_samples">live sample system</a> for presenting simple (and even not-so-simple) code samples with the code's output displayed in-context, there are samples that require a server to talk to. For those things, we have the MDN sample server, which solves these and other problems. This article is a guide to the use of the sample server.</p>
 
 <h2 id="Possible_use_cases">Possible use cases</h2>
 
