--- a/files/en-us/mdn/contribute/feedback/index.html
+++ b/files/en-us/mdn/contribute/feedback/index.html
@@ -9,9 +9,9 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p>Welcome to MDN Web Docs! <span class="seoSummary">If you have suggestions for, or are having problems using the MDN Web Docs, this is the right place to be. The very fact that you're interested in offering feedback makes you even more a part of the Mozilla community, and we thank you in advance for your interest.</span></p>
+<p>Welcome to MDN Web Docs! If you have suggestions for, or are having problems using the MDN Web Docs, this is the right place to be. The very fact that you're interested in offering feedback makes you even more a part of the Mozilla community, and we thank you in advance for your interest.</p>
 
-<p><span class="seoSummary">You have several options for offering your insight; this article will help you do so.</span></p>
+<p>You have several options for offering your insight; this article will help you do so.</p>
 
 <h2 id="Update_the_documentation">Update the documentation</h2>
 
