--- a/files/en-us/mdn/guidelines/index.html
+++ b/files/en-us/mdn/guidelines/index.html
@@ -8,6 +8,6 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">These guides provide details on how MDN documentation should be written and formatted, as well as how our code samples and other content should be presented.</span> By following these guides, you can ensure that the material you produce is clean and easy to use.</p>
+<p>These guides provide details on how MDN documentation should be written and formatted, as well as how our code samples and other content should be presented. By following these guides, you can ensure that the material you produce is clean and easy to use.</p>
 
 <p>{{LandingPageListSubpages}}</p>
