--- a/files/en-us/mdn/structures/banners_and_notices/index.html
+++ b/files/en-us/mdn/structures/banners_and_notices/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">Sometimes, an article needs a special notice added to it. This might happen if the page covers deprecated technology or other material that shouldn't be used in production code. This article covers the most common such cases and what to do.</span></p>
+<p>Sometimes, an article needs a special notice added to it. This might happen if the page covers deprecated technology or other material that shouldn't be used in production code. This article covers the most common such cases and what to do.</p>
 
 <h2 id="How_to_add_notice_boxes">How to add notice boxes</h2>
 
