--- a/files/en-us/mdn/structures/macros/index.html
+++ b/files/en-us/mdn/structures/macros/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">The <a href="/en-US/docs/MDN/Yari">Yari</a> platform on which MDN runs provides a macro system, <a href="/en-US/docs/MDN/Tools/KumaScript">KumaScript</a>, which makes it possible to automate certain tasks. This article provides information on how to invoke MDN's macros within articles.</span></p>
+<p>The <a href="/en-US/docs/MDN/Yari">Yari</a> platform on which MDN runs provides a macro system, <a href="/en-US/docs/MDN/Tools/KumaScript">KumaScript</a>, which makes it possible to automate certain tasks. This article provides information on how to invoke MDN's macros within articles.</p>
 
 <p>The <a href="/en-US/docs/MDN/Tools/KumaScript">KumaScript guide</a> provides an in-depth look at how to use macros on MDN, so this section is more of a brief overview.</p>
 
