Removed contradictory anchor tag

--- a/files/en-us/web/html/element/label/index.html
+++ b/files/en-us/web/html/element/label/index.html
@@ -37,7 +37,7 @@ browser-compat: html.elements.label
 <pre class="brush: html">
 &lt;label for="username"&gt;Enter your username:&lt;/label&gt;
 &lt;input id="username"&gt;
-&lt;label for="username"&gt;&lt;a href="/username-forgot"&gt;Forgot your username?&lt;/a&gt;&lt;/label&gt;
+&lt;label for="username"&gt;Forgot your username?&lt;/label&gt;
 </pre>
 
 <h2 id="Attributes">Attributes</h2>
