--- a/files/en-us/web/security/secure_contexts/index.html
+++ b/files/en-us/web/security/secure_contexts/index.html
@@ -25,10 +25,15 @@ tags:
 
 <p>However, it’s important to note that if a non-secure context causes a new window to be created (with or without specifying <a href="/en-US/docs/Web/API/Window/open">noopener</a>), then the fact that the opener was insecure has no effect on whether the new window is considered secure. That’s because the determination of whether or not a particular document is in a secure context is based only on considering it within the top-level browsing context with which it is associated — and not whether a non-secure context happened to be used to create it.</p>
 
-<p>Locally-delivered resources such as those with <em>http://127.0.0.1</em> URLs, <em>http://localhost</em> and  <em>http://*.localhost</em> URLs (e.g. <em>http://dev.whatever.localhost/</em>), and <em>file://</em> URLs are also considered to have been delivered securely.</p>
+<p>Locally-delivered resources, such as those with <em>http://127.0.0.1</em> URLs, <em>http://localhost</em> and  <em>http://*.localhost</em> URLs (e.g. <em>http://dev.whatever.localhost/</em>), and <em>file://</em> URLs, are considered to be delivered securely. </p>
 
 <div class="notecard note">
-<p><strong>Note:</strong> Firefox 84 and later support <em>http://localhost</em> and <em>http://*.localhost</em> URLs as trustworthy origins (earlier versions did not, because <code>localhost</code> was not guaranteed to map to a local/loopback address).</p>
+<p><strong>Note:</strong> 
+  <ul>
+    <li>Firefox 84 and later support <em>http://localhost</em> and <em>http://*.localhost</em> URLs as trustworthy origins (earlier versions did not, because <code>localhost</code> was not guaranteed to map to a local/loopback address).</li>
+    <li>In Firefox 90 and later, the web extension address <em>(`moz-extension://`)</em> is considered secure.</li>
+  </ul>
+  </p>
 </div>
 
 <p>Resources that are not local, to be considered secure, must meet the following criteria:</p>
